# web_dev

./: .env.example  README.MD  config.py  fixture_categories.json  fixture_products.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_slug.py  0003_alter_blogpost_views.py  0004_alter_blogpost_options.py
blog/templates/blog/: add_blog_form.html  blog_detail.html  blog_list.html  delete_blog_confirm.html  update_blog_form.html
catalog/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  validators.py  views.py
catalog/management/commands/: add_categories.py  add_content_manager.py  add_moderator.py  add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_categories_name_alter_product_category.py  0002_alter_product_options_product_owner_product_status.py  0003_alter_product_options.py  0003_lead_alter_product_options_alter_product_image.py
catalog/templates/html_pages/: add_product_form.html  base.html  catalog.html  categories.html  categories_details.html  contact.html  (+10 more)
catalog/templatetags/: forms.py  group_tag.py  my_tag.py
config/: services.py  settings.py  urls.py
html_pages/: catagory_page.html  catalog_page.html  contact_page.html  main_page.html
src/: server.py
students/: urls.py
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_alter_customuser_options_customuser_token_and_more.py  0004_customuser_country.py
users/templates/: login.html
(+7 files in other folders)
