[tool.poetry]
name = "web-dev"
version = "0.1.0"
description = ""
authors = ["Valdemar <vladimirteslenko@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
